[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorikeet-security-agent-exporter"
version = "0.1.0"
description = "Agentic internal-network exporter for the Lorikeet Security platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Lorikeet Security", email = "security@lorikeetsecurity.com" }]
keywords = ["security", "pentest", "vulnerability", "exporter", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "rich>=13.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
lk-exporter = "lk_exporter.cli:main"

[project.urls]
Homepage = "https://lorikeetsecurity.com"
Repository = "https://github.com/Lorikeet-Security/lorikeet-security-agent-exporter"

[tool.setuptools.packages.find]
where = ["."]
include = ["lk_exporter*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
